--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@types/inquirer": "^7.3.1",
     "@types/jest": "^26.0.20",
     "@types/mock-fs": "^4.13.0",
-    "@types/node": "^14.14.31",
+    "@types/node": "^15.0.3",
     "@types/react": "^17.0.2",
     "@types/vue": "^2.0.0",
     "jest": "^26.6.3",
@@ -51,6 +51,7 @@
     "typescript": "^4.2.2"
   },
   "dependencies": {
+    "chalk": "^4.1.1",
     "@tarojs/helper": "^3.1.1",
     "@types/write": "^2.0.0",
     "fuzzy": "^0.1.3",
